--- a/sample.html
+++ b/sample.html
@@ -14,115 +14,6 @@
 </head>
 
 <body>
-    <div class="sample01-container">
-        <nav class="navbar navbar-expand-lg sample-nav nav-01">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="./img/navbar-icon-blue.svg" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">首頁</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">服務內容</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">關於盛雲</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">系統介紹</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">租賃服務</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">聯絡我們</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <img src="./img/line-icon.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <main class="sample01-main">
-            <div class="sample-text">
-                <div class="sample-title">想要 _____ 沒問題！</div>
-                <div class="sample-content">你許願，我來做！要什麼有什麼！</div>
-                <button class="more-btn">
-                    <img src="./img/more-icon-blue.svg" alt="">
-                    <div>了解更多</div>
-                </button>
-                <button class="wish-btn">
-                    <img src="./img/wish-icon-blue.svg" alt="">
-                    <div>我要許願</div>
-                </button>
-            </div>
-
-        </main>
-    </div>
-    <div class="sample02-container">
-        <nav class="navbar navbar-expand-lg sample-nav nav-02">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="./img/navbar-icon-white.svg" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">首頁</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">服務內容</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">關於盛雲</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">系統介紹</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">租賃服務</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">聯絡我們</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <img src="./img/line-icon.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <main class="sample02-main">
-            <div class="sample-text">
-                <div class="sample-title">想要 _____<br>沒問題！</div>
-                <div class="sample-content">你許願，我來做！<br>要什麼有什麼！</div>
-                <button class="more-btn">
-                    <img src="./img/more-icon-black.svg" alt="">了解更多
-                </button>
-                <button class="wish-btn">
-                    <img src="./img/wish-icon-black.svg" alt="">我要許願
-                </button>
-            </div>
-        </main>
-    </div>
     <div class="sample03-container">
         <nav class="navbar navbar-expand-lg sample-nav nav-03">
             <div class="container-fluid">
@@ -165,7 +56,7 @@
         </nav>
         <main class="sample03-main">
             <div class="sample-text">
-                <div class="sample-title">想要&emsp;_____&emsp;沒問題！</div>
+                <div class="sample-title">想要&emsp;&emsp;&emsp;&emsp;&emsp;沒問題！</div>
                 <div class="sample-content">你許願，我來做！要什麼有什麼！</div>
                 <button class="more-btn">
                     <img src="./img/more-icon-blue.svg" alt="">了解更多
@@ -174,7 +65,8 @@
                     <img src="./img/wish-icon-blue.svg" alt="">我要許願
                 </button>
             </div>
-
+            <div id="particles-js"></div>
+            <div id="fade" class="sample-title" style="text-align:center;"></div>
         </main>
     </div>
     <div class="sample04-container">
@@ -230,7 +122,156 @@
             </div>
         </main>
     </div>
+    <div class="sample02-container">
+        <nav class="navbar navbar-expand-lg sample-nav nav-02">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/navbar-icon-white.svg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">首頁</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">服務內容</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">關於盛雲</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">系統介紹</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">租賃服務</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">聯絡我們</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="./img/line-icon.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main class="sample02-main">
+            <div class="sample-text">
+                <div class="sample-title">想要 _____<br>沒問題！</div>
+                <div class="sample-content">你許願，我來做！<br>要什麼有什麼！</div>
+                <button class="more-btn">
+                    <img src="./img/more-icon-black.svg" alt="">了解更多
+                </button>
+                <button class="wish-btn">
+                    <img src="./img/wish-icon-black.svg" alt="">我要許願
+                </button>
+            </div>
+        </main>
+    </div>
+    <div class="sample01-container">
+        <nav class="navbar navbar-expand-lg sample-nav nav-01">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/navbar-icon-blue.svg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">首頁</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">服務內容</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">關於盛雲</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">系統介紹</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">租賃服務</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">聯絡我們</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <img src="./img/line-icon.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main class="sample01-main">
+            <div class="sample-text">
+                <div class="sample-title">想要 _____ 沒問題！</div>
+                <div class="sample-content">你許願，我來做！要什麼有什麼！</div>
+                <button class="more-btn">
+                    <img src="./img/more-icon-blue.svg" alt="">
+                    <div>了解更多</div>
+                </button>
+                <button class="wish-btn">
+                    <img src="./img/wish-icon-blue.svg" alt="">
+                    <div>我要許願</div>
+                </button>
+            </div>
+        </main>
+    </div>
+    <script color="0,0,0" opacity="0.5" count="99" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.js"
+        type="text/javascript" charset="utf-8"></script>
 </body>
+<script src="./js/particles.js-master/particles.js"></script>
+<script src="./js/app.js"></script>
+<script type="text/javascript">
+    // function fadetext() {
+    //     fade.style.filter = "alpha(opacity=" + x + ", style=0)";
+    //     x = ((y < 50) ? x + 4 : x - 4); y += 2;
+    //     if (y == 100) {
+    //         z = ((z >= texts.length - 1) ? 1 : z + 1); y = 0;
+    //         fade.innerHTML = texts[z]; fade.style.color = tcolor[z];
+    //     }
+    //     setTimeout("fadetext();", 10);
+    // }
+    // var texts = new Array(3),x = 0, y = 0, z = 1;
+    // texts[0] = "公文模組";
+    // texts[1] = "管理系統";
+    // texts[2] = "工程模組";
+    // fade.innerHTML = texts[0];
+    // fade.style.color = "#FCEE21";
+    // window.onload = fadetext;
+
+    function fadetext() {
+        fade.style.filter = "alpha(opacity=" + x + ", style=0)";
+        x = ((y < 50) ? x + 4 : x - 4); y += 2;
+        if (y == 100) {
+            z = ((z >= texts.length - 1) ? 1 : z + 1); y = 0;
+            fade.innerHTML = texts[z];
+        }
+        setTimeout("fadetext();", 50);
+    }
+    var texts = new Array(3), tcolor = new Array(3), x = 0, y = 0, z = 1;
+    texts[1] = "公文模組";
+    texts[2] = "管理系統";
+    texts[3] = "工程模組";
+    // tcolor[1] = "blue";
+    // tcolor[2] = "green";
+    // tcolor[3] = "#a0a";
+    fade.innerHTML = texts[z];
+    window.onload = fadetext;
+</script>
 <script>
     (function (d) {
         var config = {
@@ -240,6 +281,9 @@
         },
             h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
     })(document);
+    // particlesJS.load('particles-js', 'assets/particles.json', function () {
+    //     console.log('callback - particles.js config loaded');
+    // });
 </script>
 
 </html>
