--- a/index.html
+++ b/index.html
@@ -59,14 +59,18 @@
                 <div class="sample-title">想要&emsp;&emsp;&emsp;&emsp;&emsp;沒問題！</div>
                 <div class="sample-content">你許願，我來做！要什麼有什麼！</div>
                 <button class="more-btn">
-                    <img src="./img/more-icon-blue.svg" alt="">了解更多
+                    <img class="more-img" src="./img/more-icon-blue.svg" alt="">
+                    <img class="more-img-hover" src="./img/more-icon-light-yellow.svg" alt="">
+                    了解更多
                 </button>
                 <button class="wish-btn">
-                    <img src="./img/wish-icon-blue.svg" alt="">我要許願
+                    <img class="more-img" src="./img/wish-icon-blue.svg" alt="">
+                    <img class="more-img-hover" src="./img/wish-icon-light-yellow.svg" alt="">
+                    我要許願
                 </button>
             </div>
             <div id="particles-js"></div>
-            <div id="fade" class="sample-title" style="text-align:center;"></div>
+            <div id="fade1" class="sample-title" style="text-align:center;"></div>
         </main>
     </div>
     <div class="sample04-container">
@@ -111,15 +115,20 @@
         </nav>
         <main class="sample04-main">
             <div class="sample-text">
-                <div class="sample-title">想要_____<br>沒問題！</div>
+                <div class="sample-title">想要&emsp;&emsp;&emsp;&emsp;&emsp;<br>沒問題！</div>
                 <div class="sample-content">你許願，我來做！<br>要什麼有什麼！</div>
                 <button class="more-btn">
-                    <img src="./img/more-icon-black.svg" alt="">了解更多
+                    <img class="more-img" src="./img/more-icon-black.svg" alt="">
+                    <img class="more-img-hover" src="./img/more-icon-yellow.svg" alt="">
+                    了解更多
                 </button>
                 <button class="wish-btn">
-                    <img src="./img/wish-icon-black.svg" alt="">我要許願
+                    <img class="more-img" src="./img/wish-icon-black.svg" alt="">
+                    <img class="more-img-hover" src="./img/wish-icon-yellow.svg" alt="">
+                    我要許願
                 </button>
             </div>
+            <div id="fade2" class="sample-title" style="text-align:center;"></div>
         </main>
     </div>
     <div class="sample02-container">
@@ -252,13 +261,14 @@
     // fade.innerHTML = texts[0];
     // fade.style.color = "#FCEE21";
     // window.onload = fadetext;
-
     function fadetext() {
-        fade.style.filter = "alpha(opacity=" + x + ", style=0)";
+        fade1.style.filter = "alpha(opacity=" + x + ", style=0)";
+        fade2.style.filter = "alpha(opacity=" + x + ", style=0)";
         x = ((y < 50) ? x + 4 : x - 4); y += 2;
         if (y == 100) {
             z = ((z >= texts.length - 1) ? 1 : z + 1); y = 0;
-            fade.innerHTML = texts[z];
+            fade1.innerHTML = texts[z];
+            fade2.innerHTML = texts[z];
         }
         setTimeout("fadetext();", 50);
     }
@@ -269,7 +279,8 @@
     // tcolor[1] = "blue";
     // tcolor[2] = "green";
     // tcolor[3] = "#a0a";
-    fade.innerHTML = texts[z];
+    fade1.innerHTML = texts[z];
+    fade2.innerHTML = texts[z];
     window.onload = fadetext;
 </script>
 <script>
