--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="sample03-container">
-        <nav class="navbar navbar-expand-lg bg-light sample-nav nav-03">
+        <nav class="navbar navbar-expand-lg navbar-light sample-nav nav-03">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./img/navbar-icon-blue.svg" alt="">
@@ -124,8 +124,8 @@
         <main class="sample04-main">
             <div class="sample-text">
                 <div class="sample-title">想要
-                    <span class="sample-notshow">&emsp;&emsp;&emsp;&emsp;&ensp;</span>
-                    <span class="sample-show"></span>
+                    <span class="sample-notshow"></span>
+                    &emsp;&emsp;&emsp;&emsp;&ensp;
                     <br>沒問題！</div>
                 <div class="sample-content">你許願，我來做！<br>要什麼有什麼！</div>
                 <button class="more-btn">
@@ -252,6 +252,7 @@
         </main>
     </div> -->
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./js/particles.js-master/particles.js"></script>
 <script src="./js/app.js"></script>
 <script type="text/javascript">
