--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
             <div class="sample-text">
                 <div class="sample-title">想要
                     &emsp;&emsp;&emsp;&emsp;&ensp;
-                    <!-- <span class="sample-notshow">&emsp;&emsp;&emsp;&emsp;&emsp;</span>
-                    <span class="sample-show"><br></span> -->
-                    沒問題！
+                    <!-- <span class="sample-notshow">&emsp;&emsp;&emsp;&emsp;&emsp;</span> -->
+                    <span class="sample-show"></span>沒問題！
                 </div>
                 <div class="sample-content">
-                    你許願，我來做！要什麼有什麼！</div>
+                    你許願，我來做！<span class="sample-show"></span>要什麼有什麼！</div>
                 <button class="more-btn">
                     <img class="more-img" src="./img/more-icon-blue.svg" alt="">
                     <img class="more-img-hover" src="./img/more-icon-light-yellow.svg" alt="">
